syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message ClientRequest {
    int32 first_value = 1;
    int32 last_value = 2;
}

message ServerResponse {
    int32 value = 1;
}

service RemoteDBService {
    rpc getValues(ClientRequest) returns (stream ServerResponse);
}
